[tool.poetry]
name = "blogger-cli"
version = "0.1.0"
description = "Blogger cli is a CLI tool to convert ipynb, md, txt file to responsive html files. It supports gh-pages and google blogger to publish."
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
nbconvert = "^5.5"
click = "^7.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
