[tool.poetry]
name = "blogger-cli"
version = "1.1.0"
description = "Blogger cli is a CLI tool to convert ipynb, md, html file to responsive html files."
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hemanta212/blogger-cli"
documentation = "https://hemanta212.github.io/blogger-cli"
keywords = ["jupyter notebook", "github pages", "blogger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
nbconvert = "^5.5"
click = "^7.0"
bs4 = "^0.0.1"
markdown = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
blogger = 'blogger_cli.cli:cli'
