[tool.poetry]
name = "blogger-cli"
version = "1.2.1"
description = "Blogger cli is a CLI tool to convert ipynb, md, html file to responsive html files."
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hemanta212/blogger-cli"
documentation = "https://hemanta212.github.io/blogger-cli"
keywords = ["jupyter notebook", "github pages", "blogger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
nbconvert = "^5.5"
click = "^7.0"
bs4 = "^0.0.1"
markdown = "^3.1"
pyspellchecker = "^0.5.0"
feedgen = "^0.8.0"
misspellings = "^1.5"
selectolax = "^0.2.1"
colorama = "^0.4.1"

[tool.poetry.scripts]
blogger = 'blogger_cli.cli:cli'

[tool.poetry.dev-dependencies]
pylint = "^2.4"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

